--- a/style.css
+++ b/style.css
@@ -2,22 +2,26 @@ h3 {
 	text-align: center;
 	font-size: 200%;
 	font-family: "Lucida Handwriting",cursive;
-	color: black;
-	text-shadow: 2px 2px 8px black; 
+	color: white;
+	text-shadow: 2px 2px 8px white; 
 }
 
 h2 {
 	text-align: center;
 	font-size: 250%;
 	font-family: "Lucida Handwriting",cursive;
-	color: black;
-	text-shadow: 2px 2px 8px black;
+	color: white;
+	text-shadow: 2px 2px 8px white;
 }
 
 p {
 	text-align: center;
 	font-size: 150%;
 	font-family: "Times New Roman", serif;
+	color: white;
+	text-shadow: 2px 2px 8px white;
+}
+
+body {
 	color: black;
-	text-shadow: 2px 2px 8px black;
 }
