--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 h3 {
 	text-align: center;
 	font-size: 200%;
-	font-family: "Lucida Handwriting",cursive;
+	font-family: "Times New Roman", serif;
 	color: white;
 	text-shadow: 2px 2px 8px white; 
 }
@@ -9,7 +9,7 @@ h3 {
 h2 {
 	text-align: center;
 	font-size: 250%;
-	font-family: "Lucida Handwriting",cursive;
+	font-family: "Times New Roman", serif;
 	color: white;
 	text-shadow: 2px 2px 8px white;
 }
