--- a/style.css
+++ b/style.css
@@ -19,5 +19,5 @@ p {
 	font-size: 150%;
 	font-family: "Times New Roman", serif;
 	color: white;
-	text-shadow: 2px 2px 8px white;
+/* 	text-shadow: 2px 2px 8px white; */
 }
