--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ h2 {
 p {
 	text-align: center;
 	font-size: 150%;
-	font-family: Courier New, monospace;
+	font-family: "Courier New", monospace;
 	color: white;
 /* 	text-shadow: 2px 2px 8px white; */
 }
